Increased image height from 200px to 300px to avoid massive whitespace around images

--- a/plugins/nl.fdmg.genre/scss/genre.scss
+++ b/plugins/nl.fdmg.genre/scss/genre.scss
@@ -271,7 +271,7 @@ div{
 .sm-ximimage {
   >.se-image-container {
     >img {
-      max-height: 200px;
+      max-height: 300px;
       width: auto !important;
       max-width: 100%;
       display: block;
